--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,8 +12,10 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #649ed7;
-$secondary: #26a69a;
+// src/css/quasar.variables.sass
+
+$primary: #fbfbfb;
+$secondary: #ffffff;
 $accent: #9c27b0;
 
 $dark: #1d1d1d;
