--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -4,8 +4,6 @@
 
 .data-table {
   position: absolute;
-  padding-top: 45px;
-  padding-left: 14px;
   width: 100%;
 }
 
@@ -20,4 +18,8 @@ tr:nth-child(odd) {
 .mainlogo {
   padding-top: 9px;
   padding-left: 7px;
+}
+
+.q-toolbar-title {
+  font-size: 0.5rem !important;
 }
