--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,5 +1,6 @@
 // app global css in SCSS form
 .q-drawer {
+  background-color: #045ab7;
 }
 
 .data-table {
@@ -16,8 +17,8 @@ tr:nth-child(odd) {
 }
 
 .mainlogo {
-  padding-top: 9px;
-  padding-left: 7px;
+  padding-top: 13px;
+  padding-left: 10px;
 }
 
 .q-toolbar-title {
