--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -14,8 +14,8 @@
 
 // src/css/quasar.variables.sass
 
-$primary: #fbfbfb;
-$secondary: #ffffff;
+$primary: #ffffff;
+$secondary: #045ab7;
 $accent: #9c27b0;
 
 $dark: #1d1d1d;
